--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Chat App</title>
-</head>
-<body>
-    <p>Welcome to chat app</p>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/index.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <title>Chat App</title>
+    </head>
+    <body>
+        <p>Welcome to chat app</p>
+        <ol id="msg"></ol>
+        <form action="" id="message-form">
+            <input type="text" name="name" id="" placeholder="message">
+            <button>send</button>
+        </form>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+        <script src="js/index.js"></script>
+    </body>
 </html>
