--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,10 @@
         <ol id="msg"></ol>
         <form action="" id="message-form">
             <input type="text" name="name" id="" placeholder="message">
-            <button>send</button>
+            <button>Send</button>
         </form>
+        <br>
+        <button id="send-location">Send Location</button>
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
         <script src="js/index.js"></script>
