--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <link rel="stylesheet" href="css/style.css">
-        <title>Chat App</title>
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-left">
-                    <p class="brand">People</p>
-                </div>
-                <dev class="col-right">
-                    <div class="msg-box">
-                        <ol id="msg"></ol>
-                    </div>
-                    <div class="type-box">
-                        <div class="form">
-                            <form action="" id="message-form">
-                                <input type="text" name="name" id="name" placeholder="message">
-                                <button>Send</button>
-                            </form>
-                        </div>
-                        <div class="loc-button">
-                            <button id="send-location">Send Location</button>
-                        </div>
-                    </div>
-                </dev>
-            </div>
-        </div>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-        <script src="js/index.js"></script>
-    </body>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>Join | ChatApp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="/css/styles.css">
+</head>
+
+<body class="centered-form">
+  <div class="centered-form__form">
+    <form action="/chat.html">
+      <div class="form-field">
+        <h3>Join a Chat<h3>
+      </div>
+      <div class="form-field">
+        <label>Display name</label>
+        <input type="text" name="name" autofocus/>
+      </div>
+      <div class="form-field">
+        <label>Room name</label>
+        <input type="text" name="room"/>
+      </div>
+      <div class="form-field">
+        <button>Join</button>
+      </div>
+    </form>
+  </div>
+</body>
+
 </html>
