--- a/public/chat.html
+++ b/public/chat.html
@@ -51,12 +51,12 @@
       </div>
     </li>
   </script>
-
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/libs/jquery-3.1.0.min.js"></script>
-  <script src="/js/libs/moment.js"></script>
-  <script src="/js/libs/mustache.js"></script>
-  <script src="/js/chat.js"></script>
+  <script src="js/libs/jquery-3.1.0.min.js"></script>
+  <script src="js/libs/moment.js"></script>
+  <script src="js/libs/mustache.js"></script>
+  <script src="js/libs/deparam.js"></script>
+  <script src="js/chat.js"></script>
 </body>
 
 </html>
