--- a/public/chat.html
+++ b/public/chat.html
@@ -4,6 +4,8 @@
 
 <head>
   <meta charset="utf-8">
+  <title>Chat | ChatApp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -51,12 +53,13 @@
       </div>
     </li>
   </script>
+
   <script src="/socket.io/socket.io.js"></script>
-  <script src="js/libs/jquery-3.1.0.min.js"></script>
-  <script src="js/libs/moment.js"></script>
-  <script src="js/libs/mustache.js"></script>
-  <script src="js/libs/deparam.js"></script>
-  <script src="js/chat.js"></script>
+  <script src="/js/libs/jquery-3.1.0.min.js"></script>
+  <script src="/js/libs/moment.js"></script>
+  <script src="/js/libs/mustache.js"></script>
+  <script src="/js/libs/deparam.js"></script>
+  <script src="/js/chat.js"></script>
 </body>
 
 </html>
