--- a/public/chat.html
+++ b/public/chat.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>Chat | ChatApp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="chat">
