--- a/public/chat.html
+++ b/public/chat.html
@@ -15,13 +15,15 @@
     <h3>People</h3>
     <div id="users"></div>
   </div>
-
+  <div class="video-box">
+    <video class='stm-video' autoplay playsinline></video>
+  </div>
   <div class="chat__main">
     <ol id="messages" class="chat__messages"></ol>
 
     <div class="chat__footer">
       <form id="message-form">
-        <input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
+        <input name="message" type="text" placeholder="Message" autofocus autocomplete="off" />
         <button>Send</button>
       </form>
       <button id="send-location">Send location</button>
@@ -30,29 +32,29 @@
 
   <script id="message-template" type="text/template">
     <li class="message">
-      <div class="message__title">
-        <h4>{{from}}</h4>
-        <span>{{createdAt}}</span>
-      </div>
-      <div class="message__body">
-        <p>{{text}}</p>
-      </div>
-    </li>
-  </script>
+    <div class="message__title">
+      <h4>{{from}}</h4>
+      <span>{{createdAt}}</span>
+    </div>
+    <div class="message__body">
+      <p>{{text}}</p>
+    </div>
+  </li>
+</script>
 
   <script id="location-message-template" type="text/template">
     <li class="message">
-      <div class="message__title">
-        <h4>{{from}}</h4>
-        <span>{{createdAt}}</span>
-      </div>
-      <div class="message__body">
-        <p>
-          <a href="{{url}}" target="_blank">My current location</a>
-        </p>
-      </div>
-    </li>
-  </script>
+    <div class="message__title">
+      <h4>{{from}}</h4>
+      <span>{{createdAt}}</span>
+    </div>
+    <div class="message__body">
+      <p>
+        <a href="{{url}}" target="_blank">My current location</a>
+      </p>
+    </div>
+  </li>
+</script>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/libs/jquery-3.1.0.min.js"></script>
@@ -60,6 +62,7 @@
   <script src="/js/libs/mustache.js"></script>
   <script src="/js/libs/deparam.js"></script>
   <script src="/js/chat.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
